kyverno/kyverno-policies /05-test-pods.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: policy-test
  labels:
    owner: "admin"
---
# This should be BLOCKED (privileged: true)
apiVersion: v1
kind: Pod
metadata:
  name: naughty
  namespace: policy-test
spec:
  containers:
  - name: cks
    image: busybox:1.36
    command: ["sh", "-c", "sleep 3600"]
    securityContext:
      privileged: true
---
# This should be ALLOWED
apiVersion: v1
kind: Pod
metadata:
  name: good
  namespace: policy-test
spec:
  containers:
  - name: cks
    image: busybox:1.36
    command: ["sh", "-c", "sleep 3600"]
    securityContext:
      privileged: false
      readOnlyRootFilesystem: true
