kyverno/kyverno-policies /04-require-readonly-rootfs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-readonly-rootfs
  annotations:
    policies.kyverno.io/title: Require Read-Only Root Filesystem
    policies.kyverno.io/severity: medium
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: check-rootfs
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Containers must have read-only root filesystem."
      pattern:
        spec:
          containers:
          - securityContext:
              readOnlyRootFilesystem: true
